# beets-yt-dlp

./: .gitignore  README.md  env.config.yml  pyproject.toml  test.py
.github/workflows/: test.yml
beetsplug/: ydl.py  yt-dlp.py  yt_dlp.py
